sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:16: error: '(' expected but identifier found.
      if compteur == getNombreValeurs() {return}
         ^AlgBubbleSort3:18: error: illegal start of simple expression
    }
    ^